--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ ul li span {
     color: #555;
     line-height: 40px;
     text-align: center;
+    border-radius: 10%;
 }
 
 ul li span:hover {
