--- a/style.css
+++ b/style.css
@@ -115,12 +115,12 @@ ul li span:hover {
 
 }
 
-.footer {
+.container .footer {
     color: white;
     text-align: center;
     }
     
-    .footer .socmed a img {
+    .container .footer .socmed a img {
         width: 40px;
         margin-top: 10px;
     }
